## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md      \
		adjectives-affixes.md    \
		adjectives-stems.md      \
		adpositions-stems.md     \
		adverbs-stems.md         \
		conjunctions-stems.md    \
		nouns-affixes.md         \
		nouns-stems.md           \
		numerals-stems.md        \
		particles-stems.md       \
		pronouns-stems.md        \
		propernouns-affixes.md   \
		punctuation-stems.md     \
		smi-propernouns-stems.md \
		smn-propernouns-stems.md \
		subjunctions-stems.md    \
		verbs-affixes.md         \
		verbs-stems.md           \
		phonology-morphology.md  \
		disambiguator-syntax.md

# clitics-morphology.md       \
# compounding-morphology.md   \
# abbreviations-stems.md      \
# acronyms-stems.md           \
# adjectives-oahpa-stems.md   \
# interjections-stems.md      \
# propernouns-stems.md        \
# smi-propernouns-stems.md

include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am
